--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -596,14 +596,14 @@ img.emoji {
 		<button id="site-navigation-menu-toggle" class="menu-toggle" aria-controls="site-navigation" aria-expanded="false"><span>Menu</span></button>
 			<div class="primary-navigation"><ul id="menu-mainmenu" class="menu">
 <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page current_page_parent menu-item-38"><a href="https://leebadung.github.io/mywordpress/blog/">Blog</a></li>
-<li id="menu-item-335" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-335"><a href="https://leebadung.github.io/mywordpress/home-2/">Landing pages</a></li>
+<li id="menu-item-335" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-335"><a href="https://leebadung.github.io/mywordpress/">Landing pages</a></li>
 <li id="menu-item-369" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-369"><a href="https://leebadung.github.io/mywordpress/shop/">Shop</a></li>
 <li id="menu-item-371" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-371"><a href="https://leebadung.github.io/mywordpress/cart/">Cart</a></li>
 <li id="menu-item-373" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-373"><a href="https://leebadung.github.io/mywordpress/checkout/">Checkout</a></li>
 <li id="menu-item-375" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-375"><a href="https://leebadung.github.io/mywordpress/my-account/">My account</a></li>
 <li id="menu-item-382" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-382"><a href="https://leebadung.github.io/mywordpress/contact/">Contact</a></li>
 <li id="menu-item-384" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-384"><a href="https://leebadung.github.io/mywordpress/about-us/">About us</a></li>
-<li id="menu-item-386" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-386"><a href="https://leebadung.github.io/mywordpress/">Trang chủ</a></li>
+<li id="menu-item-386" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-386"><a href="https://leebadung.github.io/mywordpress/trang-chu/">Trang chủ</a></li>
 </ul></div>
 <div class="menu"><ul>
 <li><a href="https://leebadung.github.io/mywordpress/">Home</a></li>
@@ -612,9 +612,9 @@ img.emoji {
 <li class="page_item page-item-370"><a href="https://leebadung.github.io/mywordpress/cart/">Cart</a></li>
 <li class="page_item page-item-372"><a href="https://leebadung.github.io/mywordpress/checkout/">Checkout</a></li>
 <li class="page_item page-item-381"><a href="https://leebadung.github.io/mywordpress/contact/">Contact</a></li>
-<li class="page_item page-item-334"><a href="https://leebadung.github.io/mywordpress/home-2/">Landing pages</a></li>
 <li class="page_item page-item-374"><a href="https://leebadung.github.io/mywordpress/my-account/">My account</a></li>
 <li class="page_item page-item-368"><a href="https://leebadung.github.io/mywordpress/shop/">Shop</a></li>
+<li class="page_item page-item-378"><a href="https://leebadung.github.io/mywordpress/trang-chu/">Trang chủ</a></li>
 </ul></div>
 		</nav><!-- #site-navigation -->
 				<ul id="site-header-cart" class="site-header-cart menu">
@@ -700,7 +700,7 @@ Commenter avatars come from <a href="https://en.gravatar.com/">Gravatar</a>.</p>
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="2c6271653b"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="186"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="ak_js" value="86"><script>document.getElementById( "ak_js_1" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 	
