--- a/cart/index.html
+++ b/cart/index.html
@@ -597,14 +597,14 @@ img.emoji {
 		<button id="site-navigation-menu-toggle" class="menu-toggle" aria-controls="site-navigation" aria-expanded="false"><span>Menu</span></button>
 			<div class="primary-navigation"><ul id="menu-mainmenu" class="menu">
 <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="https://leebadung.github.io/mywordpress/blog/">Blog</a></li>
-<li id="menu-item-335" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-335"><a href="https://leebadung.github.io/mywordpress/">Landing pages</a></li>
+<li id="menu-item-335" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-335"><a href="https://leebadung.github.io/mywordpress/home-2/">Landing pages</a></li>
 <li id="menu-item-369" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-369"><a href="https://leebadung.github.io/mywordpress/shop/">Shop</a></li>
 <li id="menu-item-371" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-370 current_page_item menu-item-371"><a href="https://leebadung.github.io/mywordpress/cart/" aria-current="page">Cart</a></li>
 <li id="menu-item-373" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-373"><a href="https://leebadung.github.io/mywordpress/checkout/">Checkout</a></li>
 <li id="menu-item-375" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-375"><a href="https://leebadung.github.io/mywordpress/my-account/">My account</a></li>
 <li id="menu-item-382" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-382"><a href="https://leebadung.github.io/mywordpress/contact/">Contact</a></li>
 <li id="menu-item-384" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-384"><a href="https://leebadung.github.io/mywordpress/about-us/">About us</a></li>
-<li id="menu-item-386" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-386"><a href="https://leebadung.github.io/mywordpress/trang-chu/">Trang chủ</a></li>
+<li id="menu-item-386" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-386"><a href="https://leebadung.github.io/mywordpress/">Trang chủ</a></li>
 </ul></div>
 <div class="menu"><ul>
 <li><a href="https://leebadung.github.io/mywordpress/">Home</a></li>
@@ -613,9 +613,9 @@ img.emoji {
 <li class="page_item page-item-370 current_page_item"><a href="https://leebadung.github.io/mywordpress/cart/" aria-current="page">Cart</a></li>
 <li class="page_item page-item-372"><a href="https://leebadung.github.io/mywordpress/checkout/">Checkout</a></li>
 <li class="page_item page-item-381"><a href="https://leebadung.github.io/mywordpress/contact/">Contact</a></li>
+<li class="page_item page-item-334"><a href="https://leebadung.github.io/mywordpress/home-2/">Landing pages</a></li>
 <li class="page_item page-item-374"><a href="https://leebadung.github.io/mywordpress/my-account/">My account</a></li>
 <li class="page_item page-item-368"><a href="https://leebadung.github.io/mywordpress/shop/">Shop</a></li>
-<li class="page_item page-item-378"><a href="https://leebadung.github.io/mywordpress/trang-chu/">Trang chủ</a></li>
 </ul></div>
 		</nav><!-- #site-navigation -->
 				<ul id="site-header-cart" class="site-header-cart menu">
